# LibreChatObsidianSync

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build-and-deploy.yml  build-and-push.yml  mcp-service.yml  test.yml  worker-service.yml
McpService/: .test-setup.md  Dockerfile  README.md  main.py  requirements.txt
McpService/shared/: __init__.py  auth.py  middleware.py  storage.py
McpService/tests/: __init__.py
McpService/tests/unit/: test_auth.py  test_file_storage.py  test_list_files_scoping.py  test_obsidian_sync_tools.py  test_security.py  test_storage.py  test_style.py
McpService/tools/: __init__.py  file_storage.py  obsidian_sync.py
Worker/: Dockerfile  README.md  main.py  requirements.txt
Worker/tests/: test_git_credentials.py  test_sync.py
Worker/tests/unit/: test_functionality.py  test_structure.py  test_style.py
docs/: DEVELOPMENT.md  README-TESTING.md  SETUP-SUMMARY.md
scripts/: run-checks.sh  run-fast-tests.sh  run-integration-tests.sh
